--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 python-dotenv==1.0.1 
 dspy-ai==2.5.6 
-seaborn==0.13.2
 matplotlib==3.9.2
 scikit-learn==1.5.2 
 torch==2.5.1
 transformers==4.46.1
-wandb
+fastembed==0.4.2
+tiktoken==0.8.0 
+fasttext-wheel==0.9.2 
