--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-python-dotenv==1.0.1 
-dspy-ai==2.5.6 
-matplotlib==3.9.2
-scikit-learn==1.5.2 
-torch==2.5.1
-transformers==4.46.1
-fastembed==0.4.2
+transformers==4.47.1
+datasets==3.2.0 
+python-dotenv==1.0.1
+seaborn==0.13.2
 tiktoken==0.8.0 
-fasttext-wheel==0.9.2 
-gradio==5.6.0
-langchain-openai==0.2.9 
-nltk==3.9.1 
-accelerate==0.26.0
