--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-transformers==4.47.1
 datasets==3.2.0 
 python-dotenv==1.0.1
 seaborn==0.13.2
@@ -6,6 +5,7 @@ tiktoken==0.8.0
 dspy-ai==2.5.43
 scikit-learn==1.6.0
 fasttext-wheel==0.9.2
-numpy==1.24.3
+numpy==1.25.2
 fastembed==0.5.0 
-xgboost==2.1.3 
+xgboost==2.1.3
+gradio==5.9.1
