--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ tiktoken~=0.8.0
 dspy-ai~=2.5.43
 scikit-learn~=1.6.0
 fasttext-wheel~=0.9.2
-numpy~=1.25.2
-fastembed~=0.5.0 
+numpy~=1.24.0
+fastembed==0.5.0 
 xgboost~=2.1.3
 gradio~=5.9.1
 nltk~=3.9.1
