--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ dspy-ai~=2.5.43
 scikit-learn~=1.6.0
 fasttext-wheel~=0.9.2
 numpy~=1.24.0
-fastembed==0.5.0 
+fastembed-gpu==0.5.0
+onnxruntime-gpu==1.20.1
 xgboost~=2.1.3
 gradio~=5.9.1
 nltk~=3.9.1
