--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ onnxruntime-gpu==1.20.1
 xgboost~=2.1.3
 gradio~=5.9.1
 nltk~=3.9.1
+wandb~=0.19.1
 #transformers==4.47.1 outdated -> now: pip install git+https://github.com/huggingface/transformers
