--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ numpy~=1.24.0
 fastembed-gpu==0.5.0
 onnxruntime-gpu==1.20.1
 xgboost~=2.1.3
-gradio~=5.9.1
+gradio~=5.12.0
 nltk~=3.9.1
-#transformers==4.47.1 outdated -> now: pip install git+https://github.com/huggingface/transformers
+wandb~=0.19.1
+transformers~=4.48.0
+torch~=2.5.0
+#flash-attn~=2.7.3 only with GPU 
