--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-datasets~=3.2.0
+datasets~=2.21.0
 tiktoken~=0.8.0
-dspy~=2.5.43
+dspy-ai~=2.5.43
 scikit-learn~=1.6.0
 fasttext-wheel~=0.9.2
 numpy~=1.26.4
 fastembed-gpu~=0.5.0
-onnxruntime-gpu~=1.20.1
 xgboost~=2.1.3
 nltk~=3.9.1
 transformers~=4.48.0
 torch~=2.5.0
-nvidia-cudnn-cu12~=9.6.0.74
 ninja~=1.11.1.3
 gradio~=4.42.0
-# pip install flash_attn-2.7.0.post2+cu124torch2.4.1cxx11abiFALSE-cp310-cp310-win_amd64.whl
