--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,19 @@
+[project]
+name = "prompt-classifier"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "datasets>=3.5.0",
+    "ipykernel>=6.29.5",
+    "pandas>=2.2.3",
+    "python-dotenv>=1.1.0",
+    "semantic-router>=0.1.7",
+    "torch>=2.7.0",
+    "tqdm>=4.67.1",
+]
+
 [tool.ruff]
 #https://beta.ruff.rs/docs/rules/
 select = [
