--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,34 @@
 [project]
-name = "prompt-classifier"
-version = "0.1.0"
-description = "Add your description here"
+name = "guarded-query-router"
+version = "0.2.0"
+description = "Comparison of the Query Routers for Large Language Models"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "cupy-cuda12x>=13.4.1",
-    "datasets>=3.5.0",
-    "fastembed-gpu>=0.6.1",
+    "black[jupyter]>=25.1.0",
+    "cupy-cuda12x>=13.4.1; sys_platform != 'darwin'",
+    "datasets>=3.5.1",
+    "fastembed-gpu>=0.6.1; sys_platform != 'darwin'",
     "fasttext-wheel>=0.9.2",
+    "gqr>=0.0.4",
     "ipykernel>=6.29.5",
+    "langchain>=0.3.25",
+    "langchain-litellm>=0.2.0",
+    "litellm>=1.68.0",
     "matplotlib>=3.10.1",
+    "nemoguardrails>=0.13.0",
     "onnx>=1.17.0",
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
     "rasterio",
+    "ruff>=0.11.8",
     "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
     "semantic-router[fastembed]>=0.1.7",
     "torch>=2.7.0",
     "tqdm>=4.67.1",
+    "transformers>=4.51.3",
+    "wandb>=0.19.10",
     "xgboost>=3.0.0",
 ]
 
